--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Sep 26 22:20:33 WIB 2023
-sdk.dir=C\:\\Users\\ASUS\\AppData\\Local\\Android\\Sdk
+#Wed Dec 13 19:13:44 WIB 2023
+sdk.dir=C\:\\Users\\admin\\AppData\\Local\\Android\\Sdk
